--- a/war/html5test.html
+++ b/war/html5test.html
@@ -10,5 +10,6 @@
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
 
+<a href="https://github.com/akjava/html5gwt">Demo of html5gwt by akjava</a>
   </body>
 </html>
